Added file encryption.
Make user image file names unique.

Added room database encryption, db key is the initial user password inputted.

Created `persistedDataModule` to provide encryptedSharedPreferences and Room database.

--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -50,6 +50,7 @@
           android:layout_alignParentEnd="true"
           app:layout_collapseMode="parallax"
           imageUrl="@{viewModel.user.image}"
+          userID="@{viewModel.user.id}"
           app:layout_collapseParallaxMultiplier="0.7"/>
 
         <androidx.appcompat.widget.Toolbar
